k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitalsync-backend-service
spec:
  type: ClusterIP
  selector:
    app: vitalsync-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
